--- a/app/src/main/res/layout/fragment_cine_detail.xml
+++ b/app/src/main/res/layout/fragment_cine_detail.xml
@@ -11,14 +11,14 @@
         android:id="@+id/edit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginRight="0dp"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_baseline_edit_24"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
-        app:layout_constraintHorizontal_bias="0.981"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toTopOf="@+id/guideline5" />
+        app:layout_constraintTop_toTopOf="@+id/guideline5"
+        android:layout_marginEnd="0dp" />
 
     <TextView
         android:id="@+id/cineName"
@@ -44,6 +44,7 @@
 
     <TextView
         android:id="@+id/cineWebsite"
+        android:autoLink="web"
         android:layout_width="200dp"
         android:layout_height="25dp"
         android:gravity="center"
@@ -81,9 +82,9 @@
     <fragment
         android:id="@+id/cineMap"
         class="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="260dp"
-        android:layout_height="240dp"
-        android:layout_marginBottom="100dp"
+        android:layout_width="275dp"
+        android:layout_height="206dp"
+        android:layout_marginBottom="180dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintHorizontal_bias="0.484"
