--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -25,24 +25,18 @@
         android:layout_width="match_parent"
         android:layout_height="702dp"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/nav_list_graph">
-
-    </androidx.fragment.app.FragmentContainerView>
+        app:navGraph="@navigation/nav_list_graph"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_bar"
         android:layout_width="407dp"
         android:layout_height="54dp"
-
         app:itemHorizontalTranslationEnabled="false"
         app:layout_anchor="@+id/fragment"
         app:layout_anchorGravity="bottom|center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_bar">
-
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
-
+        app:menu="@menu/bottom_bar" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
