--- a/app/src/main/res/layout/fragment_cine_list_item.xml
+++ b/app/src/main/res/layout/fragment_cine_list_item.xml
@@ -4,18 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_cine_list_item"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="80dp"
     android:layout_margin="8dp"
     app:cardCornerRadius="20dp"
     app:cardElevation="8dp">
 
-    <TextView
-        android:id="@+id/txt_name_item"
+    <ImageView
+        android:id="@+id/image_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
+        android:adjustViewBounds="false"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_baseline_image_24" />
+
+    <TextView
+        android:id="@+id/txt_name_item"
+        android:layout_width="409dp"
+        android:layout_height="match_parent"
         android:layout_gravity="center_horizontal|center_vertical"
-        android:background="#8c000000"
+        android:gravity="center"
         android:padding="10dp"
         android:text="@string/cine_title"
         android:textColor="#ffe3e3e3"
