--- a/app/src/main/res/menu/top_bar.xml
+++ b/app/src/main/res/menu/top_bar.xml
@@ -6,5 +6,5 @@
         android:icon="@drawable/ic_baseline_settings_24"
         android:orderInCategory="100"
         android:title="@string/settings"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
