--- a/app/src/main/res/layout/fragment_cine_list.xml
+++ b/app/src/main/res/layout/fragment_cine_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.cines.ListFragment">
@@ -26,5 +27,7 @@
         android:layout_marginRight="40dp"
         android:layout_marginBottom="200dp"
         android:contentDescription="@string/create_cine"
+        app:backgroundTint="@color/purple_500"
+        app:tint="@color/white"
         android:src="@drawable/ic_baseline_create_24" />
 </RelativeLayout>
